# nhl-setup

./: .gitignore  README.md  download_assets.py  nhl_setup.py
.github/workflows/: build.yml  build_debian.yml  build_web.yml  generate_source_deb.yaml  test_readme_gen.yaml  web_dpkg.yml  web_dpkg_opt.yaml
oldversion/: nhl_setup.py  requirements.txt
repo/: InRelease  KEY.gpg  Packages  Release  Release.gpg  nls-controlhub-apt-source_2026.02.0_all.deb  nls-controlhub-apt-source_2026.02.1_all.deb
web/: .gitignore  Dockerfile  README.md  VERSION  bump_version.sh  config.html  config.toml  config_server.py  docker-compose.yml  enable_supervisor.sh  index.html  issue_upload.py  onboard.py  plugins.html  pyproject.toml  requirements.txt  setup.html  supervisor_rpc.html
web/logs/: terminal_activities.log.1  terminal_activities.log.2  terminal_activities.log.3  terminal_activities.log.4  terminal_activities.log.5
web/templates/: config.html  footer.html  index.html  login.html  logo_editor_embed.html  plugins.html  setup.html  ssh_index.html  supervisor_rpc.html  term.html  terminal.html  utilities.html
