[project]
name = "nls-controlhub"
version = "2025.12.3"
description = "Small Web UI to control and config NHL scoreboard"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "richcolorlog>=1.44.17",
    "toml>=0.10.2",
    "paho-mqtt>=1.6.0",
    "flask-terminal>=0.2.1",
    "flask-login>=0.6.3"
]
